# FINAM_Forecast

./: .gitignore  README.md  pyproject.toml
data/: candles.csv
scripts/: config.py  dataset.py  make_submission.py  news_classification.py  train_models.py
