[tool.poetry]
name = "finam-forecast"
version = "0.1.0"
description = ""
authors = ["Nikita <nikitatalent@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
lightgbm = "^4.0.0"
joblib = "^1.3.2"
scikit-learn = "^1.3.3"
scipy = "^1.11.0"
aiohttp = "^3.12.15"
tqdm = "^4.67.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
